tests/ui/coroutine/coroutine-in-orphaned-anon-const.stderr
error[E0220]: associated type `Assoc` not found for `Self`
  --> $DIR/coroutine-in-orphaned-anon-const.rs:4:24
   |
LL |     fn test() -> Self::Assoc<{ async {} }>;
   |                        ^^^^^ associated type `Assoc` not found

error[E0220]: associated type `Assoc` not found for `Self`
  --> $DIR/coroutine-in-orphaned-anon-const.rs:4:24
   |
LL |     fn test() -> Self::Assoc<{ async {} }>;
   |                        ^^^^^ associated type `Assoc` not found
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0220`.
